--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
   -->
   <!--<script src="lib/angular/angular.js"></script>-->
   <script src="lib/angular-1.1.5/angular.js"></script>
+  <script src="lib/angular-1.1.5/angular-resource.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
