--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,7 @@
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#/view1">view1</a></li>
           <li><a href="#/view2">view2</a></li>
+          <li><a href="#/view3">view3</a></li>
         </ul>
       </div>
     </div>
