Add Goodreads API services and get books list from Goodreads shelves

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
   <!--<link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/journal/bootstrap.min.css" rel="stylesheet">-->
   <!--<link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/readable/bootstrap.min.css" rel="stylesheet">-->
-  <!--<style>body { padding-top: 60px; } </style>-->
+  <style>body { padding-top: 60px; } </style>
   <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 
   <link rel="stylesheet" href="css/app.css"/>
@@ -36,9 +36,12 @@
         <a class="brand" href="#">usedbookscraper</a>
         <ul class="nav">
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="#/view1">view1</a></li>
-          <li><a href="#/view2">view2</a></li>
-          <li><a href="#/view3">view3</a></li>
+          <li><a href="#/user">user</a></li>
+          <li><a href="#/shelves">shelves</a></li>
+          <li><a href="#/books">books</a></li>
+          <li><a href="#/editions">editions</a></li>
+          <li><a href="#/listings">listings</a></li>
+          <li><a href="#/sellers">sellers</a></li>
         </ul>
       </div>
     </div>
