--- a/app/index.html
+++ b/app/index.html
@@ -8,12 +8,12 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <script src="//codeorigin.jquery.com/jquery-2.0.3.min.js"></script>
-  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+  <script src="/static/jquery-2.0.3.min.js"></script>
+  <link href="/static/bootstrap-combined.min.css" rel="stylesheet">
   <!--<link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/journal/bootstrap.min.css" rel="stylesheet">-->
   <!--<link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/readable/bootstrap.min.css" rel="stylesheet">-->
   <style>body { padding-top: 60px; } </style>
-  <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+  <script src="/static/bootstrap.min.js"></script>
 
   <link rel="stylesheet" href="css/app.css"/>
 
