Improve formatting of books select partial

--- a/app/index.html
+++ b/app/index.html
@@ -49,9 +49,9 @@
 
   <div class="container">
 
-    <div ng-view></div>
+    <div class="row" ng-view></div>
 
-    <div>Angular seed app: v<span app-version></span></div>
+    <div class="row">Angular seed app: v<span app-version></span></div>
 
   </div> <!-- /container -->
 
