Display more fields in seller book listings

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,9 @@
   <meta name="author" content="">
 
   <script src="/static/jquery-2.0.3.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
+
+
   <link href="/static/bootstrap-combined.min.css" rel="stylesheet">
   <!--<link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/journal/bootstrap.min.css" rel="stylesheet">-->
   <!--<link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/readable/bootstrap.min.css" rel="stylesheet">-->
