--- a/app/index.html
+++ b/app/index.html
@@ -23,8 +23,11 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
   -->
-  <script src="lib/angular-1.1.5/angular.js"></script>
-  <script src="lib/angular-1.1.5/angular-resource.js"></script>
+  <!--<script src="lib/angular-1.1.5/angular.js"></script>-->
+  <!--<script src="lib/angular-1.1.5/angular-resource.js"></script>-->
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-route.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
