--- a/app/index.html
+++ b/app/index.html
@@ -12,11 +12,13 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
 
 
-  <link href="/static/bootstrap-combined.min.css" rel="stylesheet">
+  <!--<link href="/static/bootstrap-combined.min.css" rel="stylesheet">-->
+  <link href="//netdna.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet">
   <!--<link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/journal/bootstrap.min.css" rel="stylesheet">-->
   <!--<link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/readable/bootstrap.min.css" rel="stylesheet">-->
   <style>body { padding-top: 60px; } </style>
-  <script src="/static/bootstrap.min.js"></script>
+  <!--<script src="/static/bootstrap.min.js"></script>-->
+  <script src="//netdna.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js"></script>
 
   <link rel="stylesheet" href="css/app.css"/>
 
