Add progress tracker

--- a/app/index.html
+++ b/app/index.html
@@ -38,19 +38,20 @@
 
 </head>
 <body>
-  <div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
         <a class="brand" href="#">usedbookscraper</a>
-        <ul class="nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#/user">user</a></li>
-          <li><a href="#/shelves">shelves</a></li>
-          <li><a href="#/books">books</a></li>
-          <li><a href="#/editions">editions</a></li>
-          <li><a href="#/listings">listings</a></li>
-          <li><a href="#/sellers">sellers</a></li>
+
+        <ul class="nav pull-left">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#user">Begin</a></li>
         </ul>
+
+        <div class="nav pull-right" ubs-progress-tracker>
+        </div>
+
       </div>
     </div>
   </div>
