Add error alerts and convert user page to accept goodreads profile url

--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,8 @@
 
   <div class="container">
 
+    <div class="row" ubs-error-alerts></div>
+
     <div class="row" ng-view></div>
 
   </div> <!-- /container -->
