Add background image

--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="container well well-large span8 offset2 main-content">
 
     <div class="row" ubs-error-alerts></div>
 
