--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
 
 </head>
 <body>
-  <div class="navbar navbar-fixed-top">
+  <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
         <a class="brand" href="#">usedbookscraper</a>
