--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
   <!--<link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/journal/bootstrap.min.css" rel="stylesheet">-->
   <!--<link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/readable/bootstrap.min.css" rel="stylesheet">-->
   <!--<script src="/static/bootstrap.min.js"></script>-->
-  <script src="//netdna.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js"></script>
+  <!--<script src="//netdna.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js"></script>-->
 
   <link rel="stylesheet" href="css/app.css"/>
 
