--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
+  <script src="js/services/xisbn.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
