--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
 
   <div class="container well well-large span8 offset2 main-content">
 
-    <div class="row" ubs-error-alerts></div>
+    <div class="row span7" ubs-error-alerts></div>
 
     <div class="row" ng-view></div>
 
