--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/services/xisbn.js"></script>
+  <script src="js/services/goodreads.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
