Fix layout reflow when width resized by eliminating use of bootstrap grid

--- a/app/index.html
+++ b/app/index.html
@@ -57,12 +57,13 @@
     </div>
   </div>
 
-  <div class="container well well-large span8 offset2 main-content">
+  <div class="container well well-large main-content">
 
-    <div class="row span7" ubs-error-alerts></div>
+      <div class="row span7" ubs-error-alerts></div>
 
-    <div class="row" ng-view></div>
+      <div class="row" ng-view></div>
 
   </div> <!-- /container -->
+
 </body>
 </html>
