--- a/app/index.html
+++ b/app/index.html
@@ -31,8 +31,9 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
-  <script src="js/services/xisbn.js"></script>
   <script src="js/services/goodreads.js"></script>
+  <script src="js/services/xisbn.js"></script>
+  <script src="js/services/half.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
