--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,8 @@
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
 
+  <script src="components/giphy/giphy.js"></script>
+
   <!--Google analytics-->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
