Reorganize progress tracker into components/progress

--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,7 @@
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
 
+  <script src="components/progress/progress.js"></script>
   <script src="components/giphy/giphy.js"></script>
 
   <!--Google analytics-->
