Reorganize error alerts into components/erroralert

--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
   <script src="js/directives.js"></script>
 
   <script src="components/progress/progress.js"></script>
+  <script src="components/erroralert/erroralert.js"></script>
   <script src="components/giphy/giphy.js"></script>
 
   <!--Google analytics-->
