--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
   <script src="components/progress/progress.js"></script>
   <script src="components/erroralert/erroralert.js"></script>
   <script src="components/pager/pager.js"></script>
+  <script src="components/hidepadding/hidepadding.js"></script>
   <script src="components/giphy/giphy.js"></script>
 
   <!--Google analytics-->
