--- a/app/index.html
+++ b/app/index.html
@@ -31,12 +31,13 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-resource.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
-  <script src="js/services/goodreads.js"></script>
-  <script src="js/services/xisbn.js"></script>
-  <script src="js/services/half.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
+
+  <script src="services/goodreads/goodreads.js"></script>
+  <script src="services/xisbn/xisbn.js"></script>
+  <script src="services/half/half.js"></script>
 
   <script src="components/progress/progress.js"></script>
   <script src="components/erroralert/erroralert.js"></script>
