--- a/app/index.html
+++ b/app/index.html
@@ -30,10 +30,12 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-resource.js"></script>
   <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
+
+  <script src="bookscrapersession/bookscrapersession.js"></script>
+  <script src="bookscrapersession/bookscrapersession-services.js"></script>
+  <script src="bookscrapersession/bookscrapersession-controllers.js"></script>
+  <script src="bookscrapersession/bookscrapersession-directives.js"></script>
 
   <script src="services/goodreads/goodreads.js"></script>
   <script src="services/xisbn/xisbn.js"></script>
