Reorganize bookConditionHuman filter into /services/half/half-filters.js

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,6 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-resource.js"></script>
   <script src="js/app.js"></script>
-  <script src="js/filters.js"></script>
 
   <script src="bookscrapersession/bookscrapersession.js"></script>
   <script src="bookscrapersession/bookscrapersession-services.js"></script>
@@ -40,6 +39,7 @@
   <script src="services/goodreads/goodreads.js"></script>
   <script src="services/xisbn/xisbn.js"></script>
   <script src="services/half/half.js"></script>
+  <script src="services/half/half-filters.js"></script>
 
   <script src="components/progress/progress.js"></script>
   <script src="components/erroralert/erroralert.js"></script>
