--- a/app/index.html
+++ b/app/index.html
@@ -29,8 +29,8 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-resource.js"></script>
-  <script src="js/app.js"></script>
 
+  <script src="app.js"></script>
   <script src="bookscrapersession/bookscrapersession.js"></script>
   <script src="bookscrapersession/bookscrapersession-services.js"></script>
   <script src="bookscrapersession/bookscrapersession-controllers.js"></script>
