--- a/app/index.html
+++ b/app/index.html
@@ -12,20 +12,9 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
 
 
-  <!--<link href="/static/bootstrap-combined.min.css" rel="stylesheet">-->
   <link href="//netdna.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet">
-  <!--<link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/journal/bootstrap.min.css" rel="stylesheet">-->
-  <!--<link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/readable/bootstrap.min.css" rel="stylesheet">-->
-  <!--<script src="/static/bootstrap.min.js"></script>-->
-  <!--<script src="//netdna.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js"></script>-->
+  <link rel="stylesheet" href="css/app.css">
 
-  <link rel="stylesheet" href="css/app.css"/>
-
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
-  -->
-  <!--<script src="lib/angular-1.1.5/angular.js"></script>-->
-  <!--<script src="lib/angular-1.1.5/angular-resource.js"></script>-->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-resource.js"></script>
