--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,8 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
-
 
   <link href="//netdna.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/app.css">
