Add google analytics events

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,9 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular-route.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular-resource.js"></script>
 
+  <!--Google analytics stub-->
+  <script>(function(w){w.ga = angular.noop;})(window)</script>
+
   <script src="app.js"></script>
   <script src="bookscrapersession/bookscrapersession.js"></script>
   <script src="bookscrapersession/bookscrapersession-services.js"></script>
