Add meta description

--- a/prod/index.html
+++ b/prod/index.html
@@ -5,7 +5,7 @@
   <title>usedbookscraper</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description" content="buy a stack of books for a couple bucks each">
   <meta name="author" content="">
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
